# gatec

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  compiler-planning.md  syntax.md  v3-TODO.md
examples/: adders.gtl  rca4.gate  rca4.gtl
include/: AST.h  Ast.hpp  Circuit.hpp  Compiler.hpp  DAG.hpp  Error.hpp  Parser.hpp  ProgramLoader.hpp  Simulation.hpp
include/compiler/: CompCache.hpp  CompilationSession.hpp  CompileComponent.hpp  CompileError.hpp  CompileExpr.hpp  CompileStatement.hpp  Compiler.hpp  ComponentCompiler.hpp  ComponentRegistry.hpp  GateCompileTypes.hpp  GateoAliases.hpp  InlineGateo.hpp  NodeEmitter.hpp  SymbolTable.hpp
include/compiler/statement/: stmt_comp_call.hpp  stmt_init.hpp  stmt_mutation.hpp  stmt_return.hpp
include/core/: Ast.hpp  Circuit.hpp
include/parser/: Ast.hpp  Parser.hpp
include/simulation/: PreparedCircuit.hpp  Simulation.hpp
include/ui/: OutputFormatter.hpp  Repl.hpp
src/: Compiler.cpp  Parser.cpp  ProgramLoader.cpp  Simulation.cpp  gatec.cpp  main.cpp
src/compiler/: CompCache.cpp  CompilationSession.cpp  CompileComponent.cpp  CompileExpr.cpp  CompileStatement.cpp  Compiler.cpp  ComponentCompiler.cpp  InlineGateo.cpp  NodeEmitter.cpp  SymbolTable.cpp
src/compiler/statement/: comp_call.cpp  init.cpp  mutation.cpp  return_stmt.cpp
src/parser/: Parser.cpp
src/simulation/: Simulation.cpp
src/ui/: OutputFormatter.cpp  Repl.cpp
